# aegis

./: .claudeignore  .dockerignore  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
blog/: 2026-04-21-meet-aegis.md
comms/: Dockerfile  pyproject.toml  slack-app-manifest.yaml
comms/scripts/: provision_slack_channels.py
comms/src/aegis_comms/: __init__.py  __main__.py  cards.py  config.py  elevenlabs.py  format.py  logging_config.py  slack_inbound.py  slack_modal.py  telemetry.py
comms/src/aegis_comms/adapters/: __init__.py  base.py  slack.py
config/: .env.example  models.yaml  parse_claude_stream.py  run_claude.sh
core/: Dockerfile  pyproject.toml
core/src/aegis/: __main__.py  agent_tags.py  clarify_note.py  config.py  crypto.py  mcp_manager.py  models.py  observability.py  security.py  seed.py  telemetry.py
core/src/aegis/api/: app.py  auth.py  deps.py  sql_filters.py
core/src/aegis/api/models/: money.py
core/src/aegis/api/routes/: _flow_trigger.py  activities.py  agents.py  api_key.py  audit.py  capture.py  channels.py  chat.py  gmail_reauth.py  health.py  homelab.py  infra.py  infra_admin.py  integrations.py  interactions.py  knowledge.py  llm_backend.py  market.py  mcp.py  money.py  observability.py  overview.py  references.py  resources.py  settings.py  slack.py  social_auth.py  system_status.py  temporal.py  todoist.py  webhooks.py
core/src/aegis/connectors/: _base.py  _ssh.py  _subprocess.py  clickhouse.py  finance.py  homelab.py  remote_script.py  search.py  social.py  todoist.py  vercel.py
core/src/aegis/db/: __init__.py  pool.py
core/src/aegis/llm/: __init__.py  tier.py
core/src/aegis/personalities/: __init__.py  voice.py
core/src/aegis/services/: agents.py  api_key.py  chat.py  claims.py  connector_health.py  content_extract.py  content_routes.py  drive.py  fx.py  google_oauth.py  gtd_rules.py  infra.py  integrations_config.py  knowledge.py  llm_backend.py  llm_governor.py  memory.py  notifications.py  personalities.py  rss_seeder.py  slack_config.py  todoist_config.py  workflows.py
deploy/: init-extra-dbs.sh  temporal-dynamic-config.yaml
docs/: README.md  development.md  infrastructure.md  leanness-audit-2026-06-21.md  production.md  social-publishing.md
migrations/: 001_baseline.sql  001_v3_schema.sql  002_alert_governance.sql  002_todoist_projects_drop_parent_fk.sql  003_homelab_schema.sql  003_infra_credentials.sql  004_infra_read_only.sql  004_repair_jsonb_double_encoded_seeds.sql  005_repair_channels_array_config.sql  005_social.sql  006_fix_maou_money_schema.sql  006_infra_coding.sql  006_social_metrics.sql  007_agent_personalities.sql  007_repair_jsonb_double_encoded_v3.sql  008_infra_cloud.sql  008_pending_pr_url.sql  009_money_home_currency.sql  009_todoist_sync.sql  010_leadfactory.sql  010_rename_maou_schema.sql  010_todoist_string_ids.sql  011_todoist_capture.sql  011_triage_recheck.sql  012_drop_knowledge_source_quality.sql  012_gtd_clarify.sql  013_interaction_metadata.sql  013_renewal_alert_next_due_at.sql  014_delete_vercel_project_sync.sql  014_review_digest.sql  015_pandora_alert_link.sql  016_clear_poisoned_clarify_watermark.sql  017_alert_dedup_index.sql  018_drop_todoist_labels_name_unique.sql  019_renewal_alerts_last_notified.sql  020_resources_vercel_github_link_index.sql  021_slack_comms.sql  022_agents_elevenlabs_voice_id.sql  023_knowledge_pgvector.sql  024_agents_metadata.sql  (+3 more)
runbooks/: AlertmanagerDown.md  BlackboxExporterDown.md  ClickHouseDown.md  ClickHouseFailedQueries.md  ClickHouseHighMemory.md  ClickHouseReplicasMaxAbsoluteDelay.md  CriticalEndpointDown.md  DockerServiceDown.md  EndpointHighLatency.md  GPUCriticalTemperature.md  GPUExporterDown.md  GPUHighTemperature.md  GPUMemoryHigh.md  GPUThermalThrottling.md  GrafanaDown.md  LokiDown.md  LokiIngesterHighMemory.md  LokiRequestErrors.md  MinIODiskOffline.md  MinIODown.md  MinIOHighDiskUsage.md  MongoDB42Asserts.md  MongoDB42CursorTimeout.md  MongoDB42Down.md  MongoDB42HighConnections.md  MongoDB42HighMemory.md  MySQLDown.md  MySQLHighConnections.md  (+33 more)
worker/: Dockerfile  pyproject.toml
worker/src/aegis_worker/: __main__.py  bootstrap.py  interceptors.py  relevance.py  schedule_sync.py
worker/src/aegis_worker/activework/: github.py  guard.py  todoist.py
worker/src/aegis_worker/activities/: active_work.py  agent_registry.py  alert_governance.py  alerts.py  briefing.py  calendar.py  capture.py  channels.py  chat.py  clarify.py  cleanup.py  content.py  core_client.py  delivery.py  drive.py  gmail.py  homelab.py  intel_scan.py  intelligence.py  interactions.py  inventory.py  knowledge.py  llm_governor.py  memory.py  money.py  raindrop.py  review.py  rss.py  runs_v3.py  sentry_ingest.py  social.py  todoist.py
worker/src/aegis_worker/flows/: agent_chat_reply.py  alert_investigation.py  backup_audit.py  calendar_ingest.py  cert_radar.py  clarify.py  cleanup.py  daily_briefing.py  delivery_watchdog.py  drive_sync.py  github_alert.py  gmail_ingest.py  intelligence_scan.py  interaction.py  llm_spend_guard.py  memory_reflection.py  money_hygiene.py  money_process.py  raindrop_ingest.py  receipt_ingest.py  review.py  rss_ingest.py  schedule_health.py  sentry_poll.py  service_drift.py  social_metrics.py  social_publish.py  subscription_audit.py  todoist_sync.py  vercel_project_sync.py  workspace_repo_sync.py
worker/src/aegis_worker/shared/: gmail_auth.py  retry.py  temporal_links.py
(+388 files in other folders)
