[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-core"
version = "0.1.0"
description = "AEGIS Core — agents, knowledge, connectors, API"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Arshad Ansari"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "openai>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "temporalio>=1.7.0",
    "pdfminer.six>=20231228",
    "trafilatura>=1.12.0",
    "youtube-transcript-api>=1.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-asyncpg",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-fastapi",
]

[project.urls]
Homepage = "https://github.com/hikmahtech/aegis"
Repository = "https://github.com/hikmahtech/aegis"
Issues = "https://github.com/hikmahtech/aegis/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0.0",
    "respx>=0.22",
    "httpx>=0.28.0",
    "ruff>=0.8",
]
google = [
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]
